--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
         android:layout_gravity="right|center_vertical"
         android:labelFor="@+id/amountEditText"
         android:text="@string/amount"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="0"
+        android:layout_column="0" />
 
     <EditText
         android:id="@+id/amountEditText"
@@ -32,7 +34,7 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -45,11 +47,42 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
-        android:id="@+id/customPercentTextView"
+    <TextView
+        android:id="@+id/peopleNumberTextView"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
-        android:text="@string/custom_tip_percentage"
+        android:labelFor="@+id/personNumberEditText"
+        android:text="@string/person_number"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:singleLine="false" />
+
+    <EditText
+        android:id="@+id/personNumberEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:inputType="number"
+        android:maxLength="3"
+        android:text="@string/number"
+        android:numeric="integer">
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/personNumberDisplayTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:background="@android:color/holo_blue_bright"
+        android:layout_gravity="fill_horizontal"
+        android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <SeekBar
@@ -58,14 +91,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:max="30"
-        android:progress="18" />
+        android:progress="18"
+        android:layout_row="2"
+        android:layout_column="1" />
 
     <LinearLayout
         android:id="@+id/percentLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="3">
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -79,7 +115,7 @@
         <TextView
             android:id="@+id/percentCustomTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/eighteen_percent"
@@ -91,13 +127,16 @@
         android:id="@+id/tipTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="4"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -108,7 +147,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -119,22 +158,34 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
 
     <TextView
+        android:id="@+id/customPercentTextView"
+        android:layout_width="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:text="@string/custom_tip_percentage"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="2"
+        android:layout_column="0" />
+
+    <TextView
         android:id="@+id/totalTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="5"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="5">
 
         <TextView
             android:id="@+id/total15TextView"
@@ -145,7 +196,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -156,10 +207,15 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="139dp"
+        android:layout_row="7"
+        android:layout_column="0" />
 
 </GridLayout>
