--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:labelFor="@+id/amountEditText"
-        android:text="Amount"
+        android:text="@string/amount"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_row="0"
         android:layout_column="0" />
@@ -53,7 +53,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/custom_tip_percentage"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="0" />
 
     <SeekBar
@@ -63,7 +63,7 @@
         android:layout_gravity="fill_horizontal"
         android:max="30"
         android:progress="18"
-        android:layout_row="1"
+        android:layout_row="3"
         android:layout_column="1" />
 
     <LinearLayout
@@ -99,7 +99,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="3"
+        android:layout_row="4"
         android:layout_column="0" />
 
     <LinearLayout
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        >
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -127,7 +127,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginRight="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.14"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
             android:padding="8dp"
@@ -140,7 +140,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="4"
+        android:layout_row="5"
         android:layout_column="0" />
 
     <LinearLayout
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="4">
+        android:layout_row="5">
 
         <TextView
             android:id="@+id/total15TextView"
@@ -168,7 +168,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginRight="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.12"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
             android:padding="8dp"
@@ -184,14 +184,14 @@
         android:labelFor="@+id/customerDisplayTextView"
         android:text="@string/coustomer"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="5"
+        android:layout_row="1"
         android:layout_column="0" />
     <EditText
         android:id="@+id/customerEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_row="5"
+        android:layout_row="1"
         android:digits="0123456789"
         android:inputType="number"
         android:maxLength="6"/>
@@ -205,15 +205,16 @@
         android:labelFor="@+id/eachOneTextView"
         android:text="@string/each"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="7"
-        android:layout_column="0" />
+
+        android:layout_column="0"
+        android:layout_row="9" />
 
     <LinearLayout
         android:id="@+id/totalLinearLayout1"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="7">
+        android:layout_row="9">
 
         <TextView
             android:id="@+id/average15TextView"
@@ -233,7 +234,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginRight="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.09"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
             android:padding="8dp"
